--- a/public/css/app.css
+++ b/public/css/app.css
@@ -563,6 +563,9 @@ video {
 .mt-2 {
   margin-top: 0.5rem;
 }
+.mr-8 {
+  margin-right: 2rem;
+}
 .flex {
   display: flex;
 }
@@ -577,9 +580,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.w-10\/12 {
-  width: 83.333333%;
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -602,6 +602,12 @@ video {
 .gap-4 {
   gap: 1rem;
 }
+.rounded {
+  border-radius: 0.25rem;
+}
+.border-4 {
+  border-width: 4px;
+}
 .border-b-3 {
   border-bottom-width: 3px;
 }
@@ -612,9 +618,17 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(242 242 242 / var(--tw-border-opacity));
 }
+.bg-withLight-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
 .bg-withLight-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 252 252 / var(--tw-bg-opacity));
+}
+.bg-withLight-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -652,6 +666,11 @@ video {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(219 219 219 / var(--tw-text-opacity));
+}
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
