--- a/public/css/app.css
+++ b/public/css/app.css
@@ -541,15 +541,21 @@ video {
     max-width: 1536px;
   }
 }
-.absolute {
-  position: absolute;
+.fixed {
+  position: fixed;
 }
 .relative {
   position: relative;
 }
+.float-left {
+  float: left;
+}
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+}
+.ml-48 {
+  margin-left: 12rem;
 }
 .mr-4 {
   margin-right: 1rem;
@@ -587,8 +593,8 @@ video {
 .justify-between {
   justify-content: space-between;
 }
-.gap-4 {
-  gap: 1rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -633,8 +639,11 @@ video {
 .pl-52 {
   padding-left: 13rem;
 }
-.pr-2 {
-  padding-right: 0.5rem;
+.pt-16 {
+  padding-top: 4rem;
+}
+.pr-4 {
+  padding-right: 1rem;
 }
 .text-lg {
   font-size: 1.125rem;
