--- a/public/css/app.css
+++ b/public/css/app.css
@@ -547,6 +547,9 @@ video {
 .fixed {
   position: fixed;
 }
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
 }
@@ -555,9 +558,6 @@ video {
 }
 .right-0 {
   right: 0px;
-}
-.float-left {
-  float: left;
 }
 .m-2 {
   margin: 0.5rem;
@@ -597,14 +597,17 @@ video {
 .-mt-px {
   margin-top: -1px;
 }
-.ml-48 {
-  margin-left: 12rem;
-}
 .mr-4 {
   margin-right: 1rem;
 }
+.mt-5 {
+  margin-top: 1.25rem;
+}
 .ml-5 {
   margin-left: 1.25rem;
+}
+.ml-52 {
+  margin-left: 13rem;
 }
 .flex {
   display: flex;
@@ -633,6 +636,15 @@ video {
 .h-full {
   height: 100%;
 }
+.h-10 {
+  height: 2.5rem;
+}
+.h-4 {
+  height: 1rem;
+}
+.h-5\/6 {
+  height: 83.333333%;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -648,6 +660,12 @@ video {
 .w-full {
   width: 100%;
 }
+.w-4 {
+  width: 1rem;
+}
+.w-5\/6 {
+  width: 83.333333%;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -660,11 +678,11 @@ video {
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
-}
-.flex-wrap {
-  flex-wrap: wrap;
 }
 .items-center {
   align-items: center;
@@ -681,11 +699,17 @@ video {
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-2xl {
+  border-radius: 1rem;
 }
 .rounded-r-none {
   border-top-right-radius: 0px;
@@ -701,14 +725,11 @@ video {
 .border-4 {
   border-width: 4px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-t {
   border-top-width: 1px;
-}
-.border-b-3 {
-  border-bottom-width: 3px;
-}
-.border-r-3 {
-  border-right-width: 3px;
 }
 .border-gray-200 {
   --tw-border-opacity: 1;
@@ -722,13 +743,17 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(242 242 242 / var(--tw-border-opacity));
 }
-.border-gray-500 {
+.border-gray-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(210 210 210 / var(--tw-border-opacity));
+  border-color: rgb(227 227 227 / var(--tw-border-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+.bg-blue-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 238 246 / var(--tw-bg-opacity));
 }
 .bg-withLight-100 {
   --tw-bg-opacity: 1;
@@ -736,6 +761,9 @@ video {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-3 {
+  padding: 0.75rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -753,21 +781,13 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -775,17 +795,14 @@ video {
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pl-52 {
-  padding-left: 13rem;
-}
-.pt-16 {
-  padding-top: 4rem;
-}
-.pr-6 {
-  padding-right: 1.5rem;
+.pr-16 {
+  padding-right: 4rem;
 }
 .text-center {
   text-align: center;
+}
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .text-sm {
   font-size: 0.875rem;
@@ -878,9 +895,6 @@ video {
 .duration-200 {
   transition-duration: 200ms;
 }
-.duration-300 {
-  transition-duration: 300ms;
-}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -888,6 +902,10 @@ video {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:rounded-r-2xl:hover {
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
