--- a/public/css/app.css
+++ b/public/css/app.css
@@ -565,9 +565,6 @@ video {
 .m-20 {
   margin: 5rem;
 }
-.m-5 {
-  margin: 1.25rem;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -603,6 +600,9 @@ video {
 .-mt-px {
   margin-top: -1px;
 }
+.ml-20 {
+  margin-left: 5rem;
+}
 .mr-4 {
   margin-right: 1rem;
 }
@@ -636,6 +636,9 @@ video {
 .h-16 {
   height: 4rem;
 }
+.h-24 {
+  height: 6rem;
+}
 .h-full {
   height: 100%;
 }
@@ -663,11 +666,11 @@ video {
 .w-full {
   width: 100%;
 }
-.w-4 {
-  width: 1rem;
-}
 .w-5\/6 {
   width: 83.333333%;
+}
+.w-4 {
+  width: 1rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -702,6 +705,9 @@ video {
 .gap-2 {
   gap: 0.5rem;
 }
+.gap-y-8 {
+  row-gap: 2rem;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -716,6 +722,9 @@ video {
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .rounded-2xl {
   border-radius: 1rem;
@@ -764,6 +773,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(11 139 208 / var(--tw-bg-opacity));
 }
+.bg-withLight-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(143 143 143 / var(--tw-bg-opacity));
+}
 .bg-blue-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(233 238 246 / var(--tw-bg-opacity));
@@ -774,9 +787,6 @@ video {
 }
 .p-6 {
   padding: 1.5rem;
-}
-.p-3 {
-  padding: 0.75rem;
 }
 .py-4 {
   padding-top: 1rem;
