--- a/public/css/app.css
+++ b/public/css/app.css
@@ -557,15 +557,38 @@ video {
 .left-0 {
   left: 0px;
 }
+.float-right {
+  float: right;
+}
 .m-2 {
   margin: 0.5rem;
 }
 .m-20 {
   margin: 5rem;
 }
+.m-3 {
+  margin: 0.75rem;
+}
+.m-4 {
+  margin: 1rem;
+}
+.-m-4 {
+  margin: -1rem;
+}
+.-m-6 {
+  margin: -1.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
@@ -612,6 +635,33 @@ video {
 .mt-10 {
   margin-top: 2.5rem;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
+.-mt-4 {
+  margin-top: -1rem;
+}
+.-mt-6 {
+  margin-top: -1.5rem;
+}
+.-mt-8 {
+  margin-top: -2rem;
+}
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+.-mb-4 {
+  margin-bottom: -1rem;
+}
+.mr-20 {
+  margin-right: 5rem;
+}
+.mr-80 {
+  margin-right: 20rem;
+}
 .block {
   display: block;
 }
@@ -648,6 +698,27 @@ video {
 .h-full {
   height: 100%;
 }
+.h-auto {
+  height: auto;
+}
+.h-14 {
+  height: 3.5rem;
+}
+.h-56 {
+  height: 14rem;
+}
+.h-52 {
+  height: 13rem;
+}
+.h-40 {
+  height: 10rem;
+}
+.h-24 {
+  height: 6rem;
+}
+.h-44 {
+  height: 11rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -671,6 +742,12 @@ video {
 }
 .w-6 {
   width: 1.5rem;
+}
+.w-32 {
+  width: 8rem;
+}
+.w-20 {
+  width: 5rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -717,11 +794,17 @@ video {
 .gap-2 {
   gap: 0.5rem;
 }
+.gap-4 {
+  gap: 1rem;
+}
 .gap-y-5 {
   row-gap: 1.25rem;
 }
 .gap-y-8 {
   row-gap: 2rem;
+}
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -769,6 +852,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(39 57 94 / var(--tw-border-opacity));
 }
+.border-black-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(18 18 18 / var(--tw-border-opacity));
+}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
@@ -796,6 +883,74 @@ video {
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(65 95 157 / var(--tw-bg-opacity));
+}
+.bg-white-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(143 143 143 / var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 227 227 / var(--tw-bg-opacity));
+}
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 168 168 / var(--tw-bg-opacity));
+}
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(210 210 210 / var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 219 219 / var(--tw-bg-opacity));
+}
+.bg-blueLight-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(76 186 245 / var(--tw-bg-opacity));
+}
+.bg-blueLight-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 220 250 / var(--tw-bg-opacity));
+}
+.bg-blueOff-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 141 174 / var(--tw-bg-opacity));
+}
+.bg-blueOff-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 198 214 / var(--tw-bg-opacity));
+}
+.bg-blueOff-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 171 195 / var(--tw-bg-opacity));
+}
+.bg-blueOff-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(213 228 235 / var(--tw-bg-opacity));
+}
+.bg-redHard-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 62 62 / var(--tw-bg-opacity));
+}
+.bg-redHard-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 233 233 / var(--tw-bg-opacity));
+}
+.bg-redHard-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 17 17 / var(--tw-bg-opacity));
+}
+.object-right {
+  -o-object-position: right;
+     object-position: right;
+}
+.object-left {
+  -o-object-position: left;
+     object-position: left;
+}
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 .p-6 {
   padding: 1.5rem;
@@ -852,6 +1007,18 @@ video {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
@@ -873,14 +1040,23 @@ video {
 .pl-3 {
   padding-left: 0.75rem;
 }
+.pt-4 {
+  padding-top: 1rem;
+}
 .text-center {
   text-align: center;
 }
 .text-right {
   text-align: right;
 }
+.align-middle {
+  vertical-align: middle;
+}
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 .text-sm {
   font-size: 0.875rem;
@@ -898,6 +1074,22 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .font-semibold {
   font-weight: 600;
 }
@@ -907,8 +1099,17 @@ video {
 .font-medium {
   font-weight: 500;
 }
+.font-light {
+  font-weight: 300;
+}
+.font-normal {
+  font-weight: 400;
+}
 .uppercase {
   text-transform: uppercase;
+}
+.not-italic {
+  font-style: normal;
 }
 .leading-7 {
   line-height: 1.75rem;
@@ -953,6 +1154,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(18 18 18 / var(--tw-text-opacity));
 }
+.text-blueLight-600 {
+  --tw-text-opacity: 1;
+  color: rgb(11 139 208 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -990,6 +1195,9 @@ video {
 .hover\:translate-x-1:hover {
   --tw-translate-x: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:rounded-2xl:hover {
+  border-radius: 1rem;
 }
 .hover\:rounded-r-2xl:hover {
   border-top-right-radius: 1rem;
@@ -1031,6 +1239,26 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(25 37 61 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 168 168 / var(--tw-bg-opacity));
+}
+.hover\:bg-blueOff-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 198 214 / var(--tw-bg-opacity));
+}
+.hover\:bg-blueOff-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 85 104 / var(--tw-bg-opacity));
+}
+.hover\:bg-blueOff-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 141 174 / var(--tw-bg-opacity));
+}
+.hover\:bg-redHard-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 161 161 / var(--tw-bg-opacity));
+}
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(125 125 125 / var(--tw-text-opacity));
@@ -1042,6 +1270,10 @@ video {
 .hover\:text-white-100:hover {
   --tw-text-opacity: 1;
   color: rgb(252 252 252 / var(--tw-text-opacity));
+}
+.hover\:text-white-200:hover {
+  --tw-text-opacity: 1;
+  color: rgb(247 247 247 / var(--tw-text-opacity));
 }
 .hover\:shadow-xl:hover {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
